--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,7 +1,7 @@
 .jumbotron {
     align-content: center;
     text-align: center;
-    background-image: url('/assets/brat.jpg');
+    background-image: url(https://img.jakpost.net/c/2019/03/02/2019_03_02_66706_1551461528._large.jpg);
     
     margin-bottom: 0;
     font-size: 50px;
