--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -15,16 +15,19 @@
     background-attachment: fixed;
   }
   
-  #two {
-    background-image: url('/assets/huh.jpg');
-  }
+ 
   
   #lol {
     justify-content: center;
+    font: bold;
+    font: 1em sans-serif;
+    color: rgb(153, 59, 15);
+    font-weight: 36%;
+
   }
   
   #cre {
-    color: black;
+    color: rgb(168, 80, 21);
   }
   
   #crd {
@@ -33,8 +36,8 @@
     width: 800px;
     margin-bottom: 10px;
     font-style: italic;
-    /* color: yellow; */
-  }
+    color: rgb(185, 101, 31);
+     }
   
   #small {
     font-variant: small-caps;
@@ -44,9 +47,8 @@
   
   #ppp {
     padding: 0.1;
-    /* background-image: url('/assets/eight.jpg'); */
     font-size: 18px;
-    color: brown;
+    color: rgb(165, 108, 42);
   }
   
   #hut {
@@ -57,9 +59,7 @@
   #one {
     align-content: center;
     text-align: center;
-    background-image: url('/assets/free.jpg');
     font-size: 16px;
-  
   }
   
   .btn {
