--- a/src/app/quote-form/quote-form.component.css
+++ b/src/app/quote-form/quote-form.component.css
@@ -1,8 +1,12 @@
 #name {
-  color: #000;
+  color:brown;
+  font-size:larger;
     }
     
     .btn {
       font-variant: small-caps;
+    }
+    .form{
+        background-color: burlywood;
     }
     
