--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -5,7 +5,7 @@
       <p>.</p>
     </div>
 
-    <div class="for">
+    <div class="container">
       <div class="row">
         <div class="col-4" id="one">
           <div class="row" id="lol">
