--- a/src/app/vote/vote.component.css
+++ b/src/app/vote/vote.component.css
@@ -2,7 +2,7 @@
     padding: 4px;
     margin: 4px;
     border: none;
-   
+    background-color: burlywood;
     float: left;
     width:60px;
     height:50%;
