--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -50,7 +50,7 @@
   #ppp {
     padding: 0.1;
     font-size: 18px;
-    color: rgb(165, 108, 42);
+    /* color: rgb(165, 108, 42); */
   }
   
   #hut {
