--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -27,7 +27,7 @@
               <div class="card-title">
                 <h5 font color="yellow" *ngIf="showDescription">{{quote.name}}</h5></div>
               <!--structural directive set to the boolean property show description -->
-              <button type="button" (click)="toggleQuote()" class="btn btn-primary">{{showDescription? "Hide": "Show"}} Quote Details</button>
+              <button type="button" (click)="toggleQuote()" class="btn btn-warning">{{showDescription? "Hide": "Show"}} Quote Details</button>
               <!-- click triggers event binding by calling the toggle fxn method -->
               <!-- toggles the value in the show description property and dynamically alter text on the button -->
               <!-- if true it shows the description -->
@@ -48,7 +48,7 @@
                   <div class="col-2">
                     <!-- triggers an emit event to delete quote -->
                     <app-quote-details [quote]='quote' (isComplete)='deleteQuote($event,i)'>
-                      <button (click)= 'quoteDelete(true)'>Delete Quote</button>
+                      <button (click)= 'quoteDelete(true)' class="btn btn-warning">Delete Quote</button>
                     </app-quote-details>
                   </div>
                 </div>
