--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -9,7 +9,7 @@
   
   }
   #thee{
-      background-image: url(https://cdn.wallpapersafari.com/19/19/4HXjNR.png);
+      background-image: url(https://i0.wp.com/myblog.ottawaarts.com/wp-content/uploads/2010/05/DRA-042010-LeatheryTexture-MBFT1.jpg?fit=2750%2C1833);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
